# norge.no

./: .env.example  .gitignore  Caddyfile  README.md  deno.json  docker-compose.yml  patch_chat_hook.py  patch_chat_ui.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.md  epic.md  feature-request.md  issue.md  milestone.md
.github/workflows/: assistant.yml  ci.yml  cms.yml  frontend.yml  main_strapi-cms-test-app.yml
apps/assistant/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deno.json  ingest.py  pyproject.toml
apps/assistant/data/: enonic_api_articles_1.json  enonic_api_articles_2.json  enonic_api_articles_3.json  enonic_api_articles_4.json
apps/assistant/src/: main.py
apps/assistant/src/apis/: __init__.py
apps/assistant/src/apis/routers/: query.py
apps/assistant/src/dependencies/: agents.py  embeddings.py  llm.py
apps/assistant/src/graphs/agents/: structured_agent.py  unstructured_agent.py
apps/assistant/src/graphs/nodes/: ask_permission.py  end_without_search.py  external_search.py  format_response.py  local_search.py  route_after_decision.py  route_user_reply.py
apps/assistant/src/schemas/: semantic_data.py  user.py
apps/assistant/src/schemas/apis/: query.py  user.py
apps/assistant/src/states/: state.py
apps/assistant/src/tools/: sparql_tool.py  vector_store_tool.py
apps/assistant/tests/: test_api.py  test_tools.py
apps/cms/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.jsonc
apps/cms/config/: admin.ts  plugins.ts
apps/cms/src/components/blokk/: advarsel.json  faq.json  tekst.json
apps/frontend/: .dev.vars  .dockerignore  .env.example  .gitignore  Dockerfile  astro.config.mjs  deno.json  package.json  tsconfig.json  wrangler.jsonc
apps/frontend/src/: env.d.ts
apps/frontend/src/api/umbraco/: client.ts
apps/frontend/src/components/altinn/: Blocks.module.css  Blocks.tsx  index.ts
apps/frontend/src/components/livshendelse-liste/: index.tsx
apps/frontend/src/components/posthog/: posthog.astro  setup-script.ts  setup.ts
apps/frontend/src/hooks/: service.tsx
apps/frontend/src/layouts/: Layout.astro  RootLayout.astro
apps/frontend/src/pages/: index.astro
cms/: package-lock.json  package.json
(+44 files in other folders)
