[project]
name = "assistant"
version = "0.1.0"
description = ""
authors = [{ name = "Pooria Mehregan", email = "pooriamehregan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "sparqlwrapper (>=2.0.0,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "chromadb (>=1.1.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "unstructured[md] (>=0.18.15,<0.19.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langchain-chroma (>=0.2.6,<0.3.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "langchain-ollama (>=0.2.0,<0.3.0)",
]

[tool.poetry]
packages = [{ include = "*", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]
