[project]
name = "assistant"
version = "0.1.0"
description = ""
authors = [{ name = "Pooria Mehregan", email = "pooriamehregan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain==1.2.13",
    "langgraph==1.1.3",
    "langchain-google-genai==4.2.1",
    "langchain-community==0.4.1",
    "sparqlwrapper==2.0.0",
    "pydantic==2.12.5",
    "chromadb==1.5.5",
    "python-dotenv==1.2.2",
    "unstructured[md]==0.21.5",
    "fastapi==0.135.1",
    "uvicorn==0.42.0",
    "python-multipart==0.0.22",
    "langchain-chroma==1.1.0",
    "beautifulsoup4==4.14.3",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.14",
    "slowapi==0.1.9",
]

[tool.poetry]
packages = [{ include = "*", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]
